--- a/Main/public/index.html
+++ b/Main/public/index.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="../src//assets/images/icon_windowsXp.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+  <head>
+    <meta charset="utf-8" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-		<title>Windows Xp</title>
-	</head>
-	
-	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
-		<!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-	</body>
+    <meta
+      name="description"
+      content="Portfolio of Mouad Ajmani, Software Engineer with strong Frontend experience. Specialized in React, Next.js, and modern UI engineering."
+    />
+
+    <link rel="canonical" href="https://www.unknown.ma/" />
+
+    <meta property="og:title" content="Mouad Ajmani – Software Engineer" />
+    <meta
+      property="og:description"
+      content="Portfolio of Mouad Ajmani, Software Engineer with strong Frontend experience. React, Next.js, UI engineering, and web apps."
+    />
+    <meta property="og:url" content="https://www.unknown.ma/" />
+    <meta property="og:type" content="website" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Mouad Ajmani",
+        "url": "https://www.unknown.ma/",
+        "jobTitle": "Software Engineer",
+        "knowsAbout": [
+          "Frontend Engineering",
+          "React",
+          "Next.js",
+          "TypeScript",
+          "UI Engineering",
+          "Web Performance"
+        ],
+        "sameAs": [
+          "https://www.linkedin.com/in/mouad-ajmani-software-engineer/"
+        ]
+      }
+    </script>
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>Mouad Ajmani – Software Engineer | Frontend Specialist</title>
+  </head>
+
+  <body>
+    <noscript>
+      Mouad Ajmani – Software Engineer (Frontend Specialist) portfolio. Please
+      enable JavaScript to view the interactive experience.
+    </noscript>
+
+    <div id="root"></div>
+  </body>
 </html>
